# dolphin-logger

./: .env.local  .gitignore  README.md  config.json  config.json.example  dolphin-logger.py  proxy.py  pyproject.toml  requirements.txt  upload.py
src/dolphin_logger/: __init__.py  cli.py  config.py  config_utils.py  core_proxy.py  main.py  server.py  upload.py
src/dolphin_logger/providers/: __init__.py  anthropic.py  claude_code.py  google.py  ollama.py  openai.py
tests/: test_config_utils.py  test_main.py
