[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dolphin-logger"
version = "0.1.1"
authors = [
  { name="Eric Hartford", email="ehartford@gmail.com" },
]
description = "A proxy server to log LLM requests and responses."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
]
dependencies = [
    "flask",
    "flask-cors",
    "requests",
    "anthropic",
    # huggingface-hub and datasets seem related to the upload script,
    # maybe make them optional dependencies or handle separately?
    # For now, including them as core dependencies based on requirements.txt
    "huggingface-hub",
    "datasets",
]

[project.urls]
"Homepage" = "https://github.com/cognitivecomputations/dolphin-logger" 
"Bug Tracker" = "https://github.com/cognitivecomputations/dolphin-logger/issues" 

[project.scripts]
dolphin-logger = "dolphin_logger.cli:main_cli"

[tool.setuptools.packages.find]
where = ["src"]  # look for packages in the src directory
